--- a/PointCloudSlam/PointCloudSlam.vcxproj
+++ b/PointCloudSlam/PointCloudSlam.vcxproj
@@ -110,15 +110,15 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>C:\Users\Islam\Documents\Dev\openvr\headers;C:\Program Files (x86)\Intel\RSSDK\include;C:\Users\Islam\Documents\Dev\glfw\include;C:\Users\Islam\Documents\Dev\glew\include;C:\Intel\MDF_6\runtime\include;C:\Intel\MDF_6\compiler\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\Islam\Documents\Dev\glext\include;C:\Users\Islam\Documents\Dev\openvr\headers;C:\Program Files (x86)\Intel\RSSDK\include;C:\Users\Islam\Documents\Dev\glfw\include;C:\Users\Islam\Documents\Dev\glew\include;C:\Intel\MDF_6\runtime\include;C:\Intel\MDF_6\compiler\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS</PreprocessorDefinitions>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalLibraryDirectories>C:\Users\Islam\Documents\Dev\openvr\lib\win64;C:\Program Files (x86)\Intel\RSSDK\lib\x64;C:\Users\Islam\Documents\Dev\glew\lib;C:\Users\Islam\Documents\Dev\glfw\lib-vc2013;C:\Intel\MDF_6\compiler\lib\x64;C:\Intel\MDF_6\runtime\lib\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>opengl32.lib;glu32.lib;igfxcmrt64.lib;igfxcmjit64.lib;libcm.lib;glew32.lib;glfw3.lib;libpxc.lib;openvr_api.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>C:\Users\Islam\Documents\Dev\glext\lib;C:\Users\Islam\Documents\Dev\openvr\lib\win64;C:\Program Files (x86)\Intel\RSSDK\lib\x64;C:\Users\Islam\Documents\Dev\glew\lib;C:\Users\Islam\Documents\Dev\glfw\lib-vc2013;C:\Intel\MDF_6\compiler\lib\x64;C:\Intel\MDF_6\runtime\lib\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>opengl32.lib;glu32.lib;igfxcmrt64.lib;igfxcmjit64.lib;libcm.lib;glew32.lib;glew32mx.lib;glfw3.lib;glext.lib;libpxc.lib;openvr_api.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <IgnoreSpecificDefaultLibraries>LIBCMT</IgnoreSpecificDefaultLibraries>
     </Link>
     <PreBuildEvent>
@@ -137,7 +137,6 @@ SET INCLUDE=%ICLDIR%\include;%INCLUDE%
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="CmUtils.cpp" />
     <ClCompile Include="FPS.cpp" />
-    <ClCompile Include="ICP.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Matrix.cpp" />
     <ClCompile Include="PointCloud.cpp" />
@@ -157,7 +156,6 @@ SET INCLUDE=%ICLDIR%\include;%INCLUDE%
     <ClInclude Include="Camera.h" />
     <ClInclude Include="CmUtils.h" />
     <ClInclude Include="FPS.h" />
-    <ClInclude Include="ICP.h" />
     <ClInclude Include="Matrix.h" />
     <ClInclude Include="PointCloud.h" />
     <ClInclude Include="Queue.h" />
@@ -171,7 +169,6 @@ SET INCLUDE=%ICLDIR%\include;%INCLUDE%
   </ItemGroup>
   <ItemGroup>
     <Image Include="color.bmp" />
-    <Image Include="opengl-64x64.png" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
