--- a/PointCloudSlam/PointCloudSlam.vcxproj.filters
+++ b/PointCloudSlam/PointCloudSlam.vcxproj.filters
@@ -39,9 +39,6 @@
     <ClCompile Include="Render3D.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="RenderHMD.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="PointCloud.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -77,13 +74,13 @@
     <ClInclude Include="Render3D.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="RenderHMD.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="Camera.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="FPS.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="VRPNTracker.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
@@ -96,16 +93,5 @@
     <None Include="slam_genx.cpp">
       <Filter>Source Files</Filter>
     </None>
-    <None Include="min.pix">
-      <Filter>Resource Files</Filter>
-    </None>
-    <None Include="min.vrt">
-      <Filter>Resource Files</Filter>
-    </None>
-  </ItemGroup>
-  <ItemGroup>
-    <Image Include="color.bmp">
-      <Filter>Resource Files</Filter>
-    </Image>
   </ItemGroup>
 </Project>
