still fixing the gpu least square system

--- a/PointCloudSlam/PointCloudSlam.vcxproj.filters
+++ b/PointCloudSlam/PointCloudSlam.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClCompile Include="FPS.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Kdtree.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CmUtils.h">
@@ -81,6 +84,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="VRPNTracker.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ICP.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Kdtree.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
