--- a/PointCloudSlam/PointCloudSlam.vcxproj
+++ b/PointCloudSlam/PointCloudSlam.vcxproj
@@ -110,14 +110,14 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>C:\Users\Islam\Documents\Dev\vrpn\include;C:\Users\Islam\Documents\Dev\glm\include;C:\Users\Islam\Documents\Dev\glext\include;C:\Users\Islam\Documents\Dev\openvr\headers;C:\Program Files (x86)\Intel\RSSDK\sample\common\include;C:\Program Files (x86)\Intel\RSSDK\include;C:\Users\Islam\Documents\Dev\glfw\include;C:\Users\Islam\Documents\Dev\glew\include;C:\Intel\MDF_6\runtime\include;C:\Intel\MDF_6\compiler\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\Islam\Documents\Dev\boost-160-64-mpi\include;C:\Users\Islam\Documents\Dev\vrpn\include;C:\Users\Islam\Documents\Dev\glm\include;C:\Users\Islam\Documents\Dev\glext\include;C:\Users\Islam\Documents\Dev\openvr\headers;C:\Program Files (x86)\Intel\RSSDK\sample\common\include;C:\Program Files (x86)\Intel\RSSDK\include;C:\Users\Islam\Documents\Dev\glfw\include;C:\Users\Islam\Documents\Dev\glew\include;C:\Intel\MDF_6\runtime\include;C:\Intel\MDF_6\compiler\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS</PreprocessorDefinitions>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalLibraryDirectories>C:\Users\Islam\Documents\Dev\vrpn\lib;C:\Users\Islam\Documents\Dev\glext\lib;C:\Users\Islam\Documents\Dev\openvr\lib\win64;C:\Program Files (x86)\Intel\RSSDK\sample\common\lib\x64\v120;C:\Program Files (x86)\Intel\RSSDK\lib\x64;C:\Users\Islam\Documents\Dev\glew\lib;C:\Users\Islam\Documents\Dev\glfw\lib-vc2013;C:\Intel\MDF_6\compiler\lib\x64;C:\Intel\MDF_6\runtime\lib\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>C:\Users\Islam\Documents\Dev\vrpn\lib;C:\Users\Islam\Documents\Dev\glext\lib;C:\Users\Islam\Documents\Dev\openvr\lib\win64;C:\Program Files (x86)\Intel\RSSDK\sample\common\lib\x64\v120;C:\Program Files (x86)\Intel\RSSDK\lib\x64;C:\Users\Islam\Documents\Dev\glew\lib;C:\Users\Islam\Documents\Dev\glfw\lib-vc2013;C:\Intel\MDF_6\compiler\lib\x64;C:\Intel\MDF_6\runtime\lib\x64;C:\Users\Islam\Documents\Dev\boost-160-64-mpi\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>opengl32.lib;glu32.lib;igfxcmrt64.lib;igfxcmjit64.lib;libcm.lib;glew32.lib;glew32mx.lib;glfw3.lib;glext.lib;libpxc.lib;libpxcutils.lib;openvr_api.lib;vrpnserver.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <IgnoreSpecificDefaultLibraries>LIBCMT</IgnoreSpecificDefaultLibraries>
     </Link>
@@ -137,6 +137,7 @@ SET INCLUDE=%ICLDIR%\include;%INCLUDE%
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="CmUtils.cpp" />
     <ClCompile Include="FPS.cpp" />
+    <ClCompile Include="Kdtree.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Matrix.cpp" />
     <ClCompile Include="PointCloud.cpp" />
@@ -153,6 +154,8 @@ SET INCLUDE=%ICLDIR%\include;%INCLUDE%
     <ClInclude Include="Camera.h" />
     <ClInclude Include="CmUtils.h" />
     <ClInclude Include="FPS.h" />
+    <ClInclude Include="ICP.hpp" />
+    <ClInclude Include="Kdtree.h" />
     <ClInclude Include="Matrix.h" />
     <ClInclude Include="PointCloud.h" />
     <ClInclude Include="Queue.h" />
